# Covid_Mask_Detection

./: CMakeLists.txt  README.md
resources/: res.qrc
source/: application_controller.cpp  application_controller.h  main.cpp
source/camera/: mask_detection_filter.cpp  mask_detection_filter.h
source/core/: mask_detection.cpp  mask_detection.h  mask_detection_worker.cpp  mask_detection_worker.h  mask_result.h  mask_result_collector.h
source/utils/: opencv_helper.cpp  opencv_helper.h  rgb_frame_helper.cpp  rgb_frame_helper.h
ui/: main.qml  qml.qrc
